# privattacks

./: .gitignore  .readthedocs.yaml  LICENSE  MANIFEST.in  README.md  project.toml  pyproject.toml  requirements.txt  setup.py
docs/: conf.py  index.rst
docs/source/: attack_formalization.md  getting_started.rst  modules.rst  privattacks.rst
examples/: example_attacks.ipynb
privattacks/: __init__.py  attacks.py  data.py  sanitization.py  tests.ipynb  util.py
src/privattacks/: __init__.py  attacks.py  data.py
tests/: __init__.py  test_Attack.py
tests/privattacks/attacks/: test_Attack.py
