[project]
name = "privattacks"
dynamic = ["version"] # tell PEP 621 that “version” is supplied later
description = "Privattacks is a Python package for evaluating privacy risks in tabular datasets. It provides tools to quantify re-identification and attribute inference vulnerabilities based on combinations of quasi-identifiers an adversary knows about a target. The package supports both high-level and granular analysis, including per-record vulnerability distributions, multiprocessing for efficiency, and flexible input handling via pandas DataFrames and other sources."
authors = [{name="Ramon Gonçalves Gonze", email="ramongonze@gmail.com"}]
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]
dependencies = [
    "pandas>=2.2.3",
    "numpy>=2.0.2",
    "tqdm>=4.65.0",
    "pyreadr>=0.5.2"
]

[project.urls]
Documentation = "https://privattacks.readthedocs.io/"
Repository = "https://github.com/ramongonze/privattacks.git"
Issues = "https://github.com/ramongonze/privattacks/issues"

[build-system]
requires = ["setuptools>=68.0.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.package-dir] # tell setuptools I'am using a src layout
"" = "src"

[tool.setuptools.packages.find]
where = ["src"] # look in src/

[tool.setuptools.dynamic]
version = {attr = "privattacks.__version__"}
